add: simple test